# docker-microbit-v2

./: .gitignore  README.md
ble-advertising/: Cargo.toml  verify.md
ble-advertising-claude/: memory.x
ble-advertising-claude/.cargo/: config.toml
ble-advertising-softdevice/: Cargo.toml  README.md  memory.x
ble-advertising-softdevice/.cargo/: config.toml
ble-advertising-softdevice/src/: main.rs
ble-advertising/src/: .main.rs.swp  main.rs
ble-example1/: .Cargo.toml.swp  Cargo.toml  README.md
ble-example1/src/: main.rs
ble-joystick/: BUTTONS_CDEF_EXERCISE.md  BUTTONS_CDEF_WITH_E.md  BUTTON_TEST.md  BUZZER_EXERCISE.md  Cargo.toml  JOYSTICK_BIT_EXERCISE.md  LINUX_TESTING.md  QUICKSTART.md  README.md  RUST.md  memory.x
ble-joystick/.cargo/: config.toml
ble-joystick/src/: main.rs  main.rs.backup
ble-joystick/test/: README.md  ble-test.html  gui_test.py  serve.sh  test_buttons.py  test_buzzer.py  test_vibration.py
docker/: .runitdiscovery.sh.swp  Dockerfile  builddocker.sh  runit.sh  runitdiscovery.sh
microbit-ble-dev/: BLE_IMPLEMENTATION.md  Cargo.toml  GATT.md  LEARNING_PLAN.md  README.md  TESTING_GUIDE.md  TEST_CHECKLIST.md  create-test-files.sh
microbit-ble-dev/BLE_Rust_Learning/: BLE_Rust_Learning_Documentation.odt
microbit-ble-dev/src/: config.rs  gatt.rs  main.rs
microbit-ble-dev/src/tasks/: ble.rs  joystick.rs  led.rs  mod.rs
microbit-ble-dev/test/: test_battery.py  test_buttons.py  test_config.py
nrf-example/: Cargo.toml  memory.x  verify.md
nrf-example/.cargo/: config.toml
nrf-example/src/: main.rs
softdevice/: .flashit.sh.swp  .gitignore  flashit.sh  getit.sh
