[package]
name = "ble-advertising-softdevice"
authors = ["Brian Beattie <beattie@beattie-home.net>"]
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"

# Embassy dependencies - use compatible versions
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1", features = ["nrf52833", "time-driver-rtc1", "gpiote", "defmt"] }

# SoftDevice
nrf-softdevice = { version = "0.1.0", features = ["nrf52833", "ble-peripheral", "s140", "defmt", "critical-section-impl"] }

[profile.release]
debug = true
lto = true
opt-level = "z"
