[package]
name = "microbit-ble-example"
version = "0.1.0"
authors = ["Brian Beattie <beattie@beattie-home.net>"]
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"

[dependencies.nrf52833-pac]
version = "0.12.2"
features = ["cortex-m-rt"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]

# Profile for smaller binary size
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = true
