[package]
name = "ble-joystick"
authors = [ "Brian Beattie<beattie@beattie-home.net>" ]
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.1", features = ["nrf52833", "gpiote", "unstable-pac"] }
nrf-softdevice = { version = "0.1.0", features = ["nrf52833", "s140", "ble-peripheral", "ble-gatt-server", "defmt"] }
nrf-softdevice-s140 = "0.1.1"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = 2
